[project]
name = "robot_sf"
# Version is derived automatically from the git tag by hatch-vcs (see
# [tool.hatch.version] below). Do NOT hardcode a version here: the git
# tag/release line is the single source of truth. External evidence
# provenance pins resolve by these tags, so the tag line must never be
# renumbered. scripts/dev/check_version_alignment.py guards against drift.
dynamic = ["version"]
description = """
This package allows implementing a "gymnasium-style" environment
for navigating a crowd with autonomous micromobility vehicles
"""
authors = [
    {name = "Marco Tröster", email = "marco.troester.student@uni-augsburg.de"}
]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Typing :: Typed",
]
dependencies = [
    # Core dependencies
    "numpy>=2.4.6",
    "gymnasium>=0.29,<1.2",
    "numba>=0.66.0",
    "pygame>=2.6.1",
    # Data processing
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "matplotlib>=3.11.0",
    "pillow>=10.4.0",
    "svgelements>=1.9.6",
    # Utilities
    "loguru>=0.7.2",
    "rich>=15.0.0",
    "psutil>=6.1.0",
    "moviepy>=2.0.0",
    "jsonschema>=4.23.0",
    "shapely>=2.1.2",
    "networkx>=3.6.1,<4.0",
    "pyvisgraph>=0.2.1",
    "python-motion-planning>=2.0.1,<3",
    # OSM map extraction (Issue #392)
    "osmnx>=2.1.0",
    "geopandas>=1.1.4",
    "pyproj>=3.6",
    "pyyaml>=6.0",
    "orjson>=3.11.5",
]

[project.optional-dependencies]
gpu = [
    "torch[cuda]>=2.5.1",
]
training = [
    "stable-baselines3>=2.9.0",
    "torch>=2.8.0,<2.13.0",
    "scikit-learn>=1.9.0",
    "optuna>=4.9.0",
    "tensorboard>=2.21.0",
    "wandb>=0.28.0",
    "optuna-dashboard>=0.20.0",
]
recurrent = [
    "sb3-contrib>=2.9.0,<2.10.0",
]
rllib = [
    "ray[rllib]>=2.53.0",
]
progress = [
    "tqdm>=4.68.4",
]
analysis = [
    "seaborn>=0.13.2",
]
analytics = [
    "duckdb>=1.5.4",
    "pyarrow>=25.0.0",
]
viz = [
    "seaborn>=0.13.2",
]
browser = [
    "playwright>=1.61.0",
]
sacadrl = [
    "tensorflow>=2.15.0",
]
orca = [
    # Use MIT-ACL fork for ORCA: it adds a collabCoeff extension to model cooperative/adversarial behavior.
    # See https://github.com/mit-acl/Python-RVO2 for details; upstream is https://github.com/sybrenstuvel/Python-RVO2.
    # The fork is vendored under third_party/python-rvo2 to patch CMake compatibility.
    "pyrvo2",
]
socnav = [
    # Pinned runtime bridge and mesh dependencies for the vendored SocNavBench subset.
    "opencv-python-headless==5.0.0.93",
    "pyassimp==5.2.5",
    "PyOpenGL==3.1.10",
    "scikit-fmm>=2024.5",
    "scikit-image==0.26.0",
]
criticality = [
    "cma>=3.3.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs>=0.5.0", "Cython>=3.0.0"]
build-backend = "hatchling.build"

# --- Single-source version: git tag -> package version (hatch-vcs) ---------
# The git tag/release line is the canonical version source. Release tags are
# plain "X.Y.Z" (e.g. 0.0.2) and release-candidate tags are "rcX.Y.Z"
# (e.g. rc0.0.3); tag_regex maps both to the numeric X.Y.Z. For non-tag builds
# (sdists, untagged CI checkouts) hatch-vcs derives a PEP 440 dev version and
# falls back to fallback_version so builds never break.
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
tag_regex = "^(?:[\\w.-]*?)(?P<version>\\d+\\.\\d+\\.\\d+.*)$"
fallback_version = "0.0.3.dev0"

[tool.hatch.build.hooks.vcs]
# Build hook writes the resolved version to an importable module so
# `robot_sf.__version__` works from installed wheels and editable installs.
version-file = "robot_sf/_version.py"

[tool.hatchling.build.targets.wheel]
packages = [
    { include = "robot_sf" },
    { include = "robot_sf_carla_bridge" },
    { include = "examples" },
    { include = "third_party" },
]
include = ["examples/**", "benchmarks/**"]

[tool.hatchling.build.targets.wheel.shared-data]
"robot_sf/maps" = "robot_sf/maps"

[tool.hatch.build.targets.wheel.force-include]
"benchmarks" = "benchmarks"
"fast-pysf/pysocialforce" = "pysocialforce"

[tool.hatchling.build.targets.sdist]
include = [
    "/robot_sf",
    "/robot_sf_carla_bridge",
    "/fast-pysf/pysocialforce",
    "/examples",
    "/benchmarks",
    "/third_party",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "/tests",
    "/tests/pygame",
    "/.git",
    "/.pytest_cache",
    "/__pycache__",
    "/fast-pysf/tests",
    "/fast-pysf/examples",
    "/fast-pysf/benchmarks",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
required-version = "==0.15.12"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    "**/*.ipynb",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "third_party",
]

# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/preview/#selecting-single-preview-rules
preview = true
explicit-preview-rules = true

select = [
  # you already have:
  "E4","E7","E9","F","W","C901","I001",

  # **Bug catchers & safety**
  "B",      # flake8-bugbear: common footguns (B006/B008/B904 are gold)
  "BLE",    # no bare/overbroad except
  "TRY",    # try/except anti-patterns (tryceratops)
  "A",      # no shadowing of builtins
  "ARG",    # unused args in public APIs
  "S",      # Bandit security checks (safe subset, see per-file ignores)

  # **Modernization & simplification**
  "UP",     # pyupgrade: keep code current
  "C4",     # flake8-comprehensions: cleaner comps/gens
  "ICN",    # canonical import aliases (np, pd, plt, etc.)

  # **Performance & correctness nits**
  "PERF",   # perflint: avoid tiny perf traps (informational)
  "PL",     # selected pylint-derived rules (see ignores below)

  # **Time handling**
  "DTZ",    # timezone-aware datetime usage

  # **Logging / prints / commented code**
  "G",      # logging format string correctness
  "T20",    # discourage print() outside scripts/tests
  "ERA",    # eradicate commented-out code

  # **Style that doesn't fight your formatter**
  "COM",    # trailing commas where helpful
  "ISC",    # implicit string concat gotchas

  # **Housekeeping**
  "RUF",    # Ruff's own rules (e.g., unused `noqa`)
  "PGH",    # blanket noqa / useless noqa hygiene
  "TCH",    # move typing-only imports under TYPE_CHECKING
  "TID",    # tidy imports (relative vs absolute)

  # Docstrings
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
    "D417",  # Missing argument descriptions in the docstring
    "D419",  # Empty docstring
    "DOC102",  # Documented parameter {id} is not in the function's signature
    "DOC201",  # `return` is not documented in docstring
    "DOC202",  # Docstring should not have a returns section because the function doesn't return anything
]

fixable = ["ALL"]
unfixable = []

ignore = [
    # Research/scientific computing patterns that are acceptable
    "PLR0911",  # Too many return statements
    "PLR2004",  # Magic value comparison
    # Explicit Ruff security (Bandit) baseline (issue #3477): instead of suppressing the
    # whole `S` category, list only the codes currently present in the tree, so any *new*
    # category of security finding (e.g. exec/eval, yaml.load, jinja autoescape, request
    # without timeout) is now enforced. The codes below are the ratchet-down backlog;
    # .github/workflows/security-baseline.yml continues to expose full Bandit findings.
    "S101",   # assert (pervasive in tests/research)
    "S105",   # possible hardcoded password string (audit: mostly false positives)
    "S108",   # hardcoded temp-file path
    "S110",   # try-except-pass (also tracked by the broad-exception ratchet)
    "S112",   # try-except-continue
    "S202",   # tarfile unsafe members
    "S301",   # pickle usage (trusted local artifacts)
    "S310",   # url open audit
    "S311",   # non-cryptographic random (research RNG)
    "S314",   # xml ElementTree usage
    "S324",   # insecure hash (non-security fingerprints)
    "S602",   # subprocess Popen with shell=True
    "S603",   # subprocess without shell=True
    "S607",   # start-process with partial path
    "S608",   # hardcoded SQL expression
    "PGH003",   # Use specific rule codes when ignoring instead of categories
    "DTZ005",   # datetime.datetime.now() called without a 'tz' argument
    "ERA001",   # Found commented-out code
    "ARG001",   # Unused function argument
    "ARG005",   # Unused lambda argument
    "PERF401",  # Use a list comprehension to collect items
    "TRY004",   # Prefer `TypeError` exception for invalid type
    "B904",     # Within an `except` clause, raise exceptions with `raise ... from err`
    "PLW2901",  # `for` loop variable `line` overwritten by assignment target
    "TRY301",   # Abstract `raise` to an inner function
    "TRY401",   # Redundant exception object included in `logging.exception` call
    "ICN001",   # `matplotlib.pyplot` should be imported as `plt`
    "N803",     # Argument name should be lowercase
    "A005",     # Module `types` shadows a Python standard-library module
    "A001",     # Variable `id` is shadowing a Python builtin
    "G004",     # Logging statement uses f-string
    "B008",     # Do not perform function call in argument defaults
    "B023",     # Function definition does not bind loop variable
    "ISC003",   # Explicitly concatenated string should be implicitly concatenated
    "UP007",    # Use `X | Y` for type annotations
    "B007",     # Loop control variable not used within loop body
    "PLW0603",  # Using the global statement to update is discouraged
    "ARG002",   # Unused method argument
    "RUF012",   # Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF001",   # String contains ambiguous `‑` (NON-BREAKING HYPHEN)
    "RUF002",   # String contains ambiguous characters (EN DASH, EM DASH)
    "RUF003",
    "TRY300",   # Consider moving this statement to an `else` block
    "TRY003",   # Avoid specifying long messages outside the exception class
    "N806",     # Variable `X` in function should be lowercase (too noisy for math code)
    "B017",     # Do not assert blind exception: `Exception`
    "PLC0206",  # Extracting value from dictionary without calling `.items()`
    "RUF005",   # Consider iterable unpacking instead of concatenation
    "COM812",  # Missing trailing comma in a multi-line collection
    "RUF043",   # while this is harmless to fix, it creates noise for every new assertion
]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-statements = 60

[tool.ruff.lint.per-file-ignores]
# Tests: allow asserts, prints, magic values, and lazy imports for optional deps
"tests/**/*.py" = [
    "S101",
    "T201",
    "PLR2004",
    "BLE001",
    "PLC0415",
    "TC001",
    "TC002",
    "D417",
    "DOC201",
    "D102",
]
"tests/pygame/**/*.py" = [
    "S101",
    "T201",
    "BLE001",
    "PLC0415",
    "TC001",
    "TC002",
    "D417",
    "DOC201",
]
# One-off scripts / notebook exports: allow prints, local imports, optional deps.
"scripts/**/*.py" = ["T201", "PLC0415", "TC001", "TC002", "D417", "DOC201"]
# Experimental, offline CLI prototypes (issue #4627): same allowances as one-off scripts.
"experiments/**/*.py" = ["T201", "PLC0415", "TC001", "TC002", "D417", "DOC201"]
# Existing broad script exception handlers are ratcheted by
# scripts/validation/check_broad_exceptions.py; keep BLE001 scoped current files.
"scripts/analysis/amv_timeout_trace_analyzer.py" = ["BLE001"]
"scripts/analysis/build_signalized_crossing_failure_pack_issue_2754.py" = ["BLE001"]
"scripts/analysis/calibrate_scenario_priors_from_traces_issue_2726.py" = ["BLE001"]
"scripts/analysis/compare_trace_vs_live_replay_issue_2790.py" = ["BLE001"]
"scripts/analyze_feature_extractors.py" = ["BLE001"]
"scripts/benchmark/build_horizon_timestep_ablation_report.py" = ["BLE001"]
"scripts/benchmark/run_cv_forecast_eval.py" = ["BLE001"]
"scripts/benchmark/run_forecast_baseline_comparison.py" = ["BLE001"]
"scripts/benchmark/run_forecast_risk_coupling_gate.py" = ["BLE001"]
"scripts/benchmark/run_observation_noise_envelope.py" = ["BLE001"]
"scripts/benchmark/run_observation_noise_live_replay_issue_2777.py" = ["BLE001"]
"scripts/benchmark/run_reactivity_ablation_campaign_issue_3573.py" = ["PLR0913"]
"scripts/benchmark_ped_policy_collisions.py" = ["BLE001"]
"scripts/benchmark_repro_check.py" = ["BLE001"]
"scripts/classic_benchmark_full.py" = ["BLE001"]
"scripts/coverage/open_coverage_report.py" = ["BLE001"]
"scripts/demo/run_robot_sf_smoke.py" = ["BLE001"]
"scripts/demo_jsonl_recording.py" = ["BLE001"]
"scripts/dev/compact_ci_snapshot.py" = ["BLE001"]
"scripts/dev/compact_worktree_snapshot.py" = ["BLE001"]
"scripts/dev/stale_worktree_reaper.py" = ["BLE001"]
"scripts/dev/watch_pr_ci_status.py" = ["BLE001"]
"scripts/dev/worktree_hygiene_snapshot.py" = ["BLE001"]
"scripts/generate_figures.py" = ["BLE001"]
"scripts/multi_extractor_training.py" = ["BLE001"]
"scripts/perf/baseline_factory_creation.py" = ["BLE001"]
"scripts/recompute_snqi_weights.py" = ["BLE001"]
"scripts/run_social_navigation_benchmark.py" = ["BLE001"]
"scripts/snqi_sensitivity_analysis.py" = ["BLE001"]
"scripts/snqi_weight_optimization.py" = ["BLE001"]
"scripts/test_planner_collision.py" = ["BLE001"]
"scripts/tools/analyze_holonomic_adapter_error.py" = ["BLE001"]
"scripts/tools/analyze_imitation_results.py" = ["BLE001"]
"scripts/tools/benchmark_feature_extractors.py" = ["BLE001"]
"scripts/tools/benchmark_publication_bundle.py" = ["BLE001"]
"scripts/tools/campaign_result_store.py" = ["BLE001"]
"scripts/tools/check_context_note_freshness.py" = ["BLE001"]
"scripts/tools/classify_observation_noise_mechanisms.py" = ["BLE001"]
"scripts/tools/compare_holonomic_vs_differential_rollout.py" = ["BLE001"]
"scripts/tools/compile_benchmark_artifacts.py" = ["BLE001"]
"scripts/tools/generate_next_issue_shortlist.py" = ["BLE001"]
"scripts/tools/generate_odd_hazard_coverage_matrix.py" = ["BLE001"]
"scripts/tools/generate_scenario_atlas.py" = ["BLE001"]
"scripts/tools/hazard_odd_coverage_rollup.py" = ["BLE001"]
"scripts/tools/manage_external_repos.py" = ["BLE001"]
"scripts/tools/mujoco_amv_micro_backend.py" = ["BLE001"]
"scripts/tools/orca_rvo2_preflight.py" = ["BLE001"]
"scripts/tools/paper_results_handoff.py" = ["BLE001"]
"scripts/tools/policy_analysis_run.py" = ["BLE001"]
"scripts/tools/probe_crowdnav_height_source_harness.py" = ["BLE001"]
"scripts/tools/probe_social_jym_wrapper.py" = ["BLE001"]
"scripts/tools/probe_sonic_model_inference.py" = ["BLE001"]
"scripts/tools/probe_sonic_source_harness.py" = ["BLE001"]
"scripts/tools/publish_model_registry_release.py" = ["BLE001"]
"scripts/tools/release_evidence_snapshot.py" = ["BLE001"]
"scripts/tools/render_scenario_videos.py" = ["BLE001"]
"scripts/tools/render_trajectory_panels.py" = ["BLE001"]
"scripts/tools/run_adversarial_manifest_smoke.py" = ["BLE001"]
"scripts/tools/run_benchmark_sql_recipe.py" = ["BLE001"]
"scripts/tools/scenario_authoring.py" = ["BLE001"]
"scripts/tools/stale_artifact_detector.py" = ["BLE001"]
"scripts/tools/validate_experiment_registry.py" = ["BLE001"]
"scripts/training/collect_predictive_planner_data.py" = ["BLE001"]
"scripts/training/fixed_feature_extractor_candidates.py" = ["BLE001"]
"scripts/training/launch_optuna_expert_ppo.py" = ["BLE001"]
"scripts/training/optuna_expert_ppo.py" = ["BLE001"]
"scripts/training/optuna_feature_extractor.py" = ["BLE001"]
"scripts/training/run_predictive_training_pipeline.py" = ["BLE001"]
"scripts/training/train_ppo.py" = ["BLE001"]
"scripts/training/train_predictive_planner.py" = ["BLE001"]
"scripts/training/train_sac_sb3.py" = ["BLE001"]
"scripts/validate_snqi_scripts.py" = ["BLE001"]
"scripts/validation/check_docstring_todos.py" = ["BLE001"]
"scripts/validation/extended_osm_validation.py" = ["BLE001"]
"scripts/validation/performance_smoke_test.py" = ["BLE001"]
"scripts/validation/playback_trajectory.py" = ["BLE001"]
"scripts/validation/run_examples_smoke.py" = ["BLE001"]
"scripts/validation/run_grid_route_deep_dive.py" = ["BLE001"]
"scripts/validation/run_policy_search_step_diagnostics.py" = ["BLE001"]
"scripts/validation/run_predictive_hard_seed_diagnostics.py" = ["BLE001"]
"scripts/validation/run_predictive_success_campaign.py" = ["BLE001"]
"scripts/validation/run_topology_hypothesis_diagnostics.py" = ["BLE001"]
"scripts/validation/smoke_threejs_viewer_browser.py" = ["BLE001"]
"scripts/validation/validate_forecast_batch.py" = ["BLE001"]
"scripts/validation/validate_semantic_boundaries_issue_2728.py" = ["BLE001"]
"scripts/validation/verify_maps.py" = ["BLE001"]
"scripts/validation/verify_sf_implementation.py" = ["BLE001"]
"examples/**/*.py" = ["T201", "BLE001", "PLC0415", "TC001", "TC002", "D417", "DOC201"]
# Mirrored AMV-paper figure scripts: verbatim copies kept for provenance; exempt
# from docstring/complexity style so the mirror is not diverged from its source.
"examples/plotting/paper_figures/*.py" = [
    "D101",
    "D103",
    "C901",
    "PLR0912",
    "PLR0915",
    "C408",
    "RUF046",
]
"docs/**/*.py" = ["T201", "BLE001", "PLC0415", "TC001", "TC002", "D417", "DOC201"]
"specs/**/*.py" = ["T201", "BLE001", "PLC0415", "TC001", "TC002", "D417", "DOC201"]
# Misc tooling directories: ignore docstring return/arg rules
"SLURM/**/*.py" = ["D417", "DOC201"]
"hooks/**/*.py" = ["D417", "DOC201"]
"utilities/**/*.py" = ["D417", "DOC201"]
"docs/tooling/svg_conv/**/*.py" = ["D417", "DOC201"]
"setup.py" = ["D417", "DOC201"]
# CLI tools: allow prints to stdout.
# Existing broad benchmark exception handlers are ratcheted by
# scripts/validation/check_broad_exceptions.py; keep BLE001 scoped current files.
# Issue #4859: aggregate.py/metrics.py/visualization.py worst sites fixed; BLE001 removed.
# Issue #4880 (commit 1): schema/contract/manifest/catalog group fully narrowed; BLE001
# removed for ablation, artifact_catalog, freeze_manifest, imitation_manifest,
# scenario_contract, scenario_schema, schema_reference, summary,
# validation/trajectory_dataset, validation_utils.
# helper_catalog.py keeps BLE001: its wrappers intentionally convert any failure to RuntimeError.
"robot_sf/benchmark/camera_ready_campaign.py" = ["BLE001"]
"robot_sf/benchmark/camera_ready/campaign.py" = ["BLE001"]
"robot_sf/benchmark/cli.py" = ["T201"]
"robot_sf/benchmark/doctor.py" = ["BLE001"]
"robot_sf/benchmark/failure_extractor.py" = ["BLE001"]
"robot_sf/benchmark/full_classic/render_sim_view.py" = ["C901"]
"robot_sf/benchmark/full_classic/visuals.py" = ["C901"]
"robot_sf/benchmark/helper_catalog.py" = ["BLE001"]
"robot_sf/benchmark/map_runner.py" = ["BLE001"]
"robot_sf/benchmark/map_runner_batch_runner.py" = ["BLE001"]
"robot_sf/benchmark/runner.py" = ["BLE001"]
"robot_sf/benchmark/snqi/cli.py" = ["BLE001", "T201"]
"robot_sf/benchmark/snqi/compute.py" = ["BLE001"]
# Issue #4880 (commit 2): runner/map/snqi/planner group; BLE001 removed for
# hazard_odd_coverage, orca_preflight, planner_inclusion, predictive_planner_config,
# snqi/campaign_contract, snqi/weights_validation.
# Kept broad on purpose (CLI boundary / diagnostic / batch-isolation / policy handlers):
# cli.py, snqi/cli.py, doctor.py, helper_catalog.py, map_runner*.py, runner.py,
# snqi/compute.py (latent capture_output+stderr ValueError masked by handler; see PR body).
# Issue #4880 (commit 3): viz/figure/full_classic group; BLE001 removed for figure_qa,
# plots, full_classic/{orchestrator,plots,render_sim_view(C901 kept),validation,visual_deps}.
# camera_ready/campaign.py keeps BLE001: its full-benchmark-run handler is campaign fault isolation.
# Issue #4880: cli.py is fully narrowed; BLE001 remains enabled as a ratchet.
# Issue #4859: visualization.py worst sites fixed, BLE001 removed to enforce lint guard.
"robot_sf/adversarial/**/*.py" = ["D417", "DOC201", "TC001", "TC003"]
"robot_sf/adversarial/config.py" = ["C901", "PLR0913"]
# trajectory_verifier: verify_trajectory has 9 keyword-only args as specified by issue #4757 API contract
"robot_sf/benchmark/trajectory_verifier.py" = ["PLR0913"]
"robot_sf/adversarial/search.py" = ["BLE001"]
"robot_sf/adversarial/certification.py" = ["BLE001", "PLC0415"]
"tests/adversarial/**/*.py" = ["D100", "D103", "TC003"]

# fast-pysf subtree: gradual adoption - complexity rules relaxed, allow prints in examples/benchmarks
"fast-pysf/**/*.py" = [
    "C901",    # Complex function (relax initially for existing code)
]
"fast-pysf/benchmarks/**/*.py" = ["T201", "D417", "DOC201"]  # Allow prints in benchmarks
"fast-pysf/tests/**/*.py" = ["S101", "T201", "D417", "DOC201"]  # Allow asserts and prints in tests
"fast-pysf/examples/**/*.py" = ["T201", "D417", "DOC201"]  # Allow prints in examples
"fast-pysf/pysocialforce/__init__.py" = ["F401"]  # Public API re-exports


# Allow unused variables when underscore-prefixed.
# dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["robot_sf", "fast-pysf/pysocialforce"]

# Omit test files and non-library code from coverage measurement
omit = [
    "*/tests/*",
    "*/test_*",
    "tests/pygame/*",
    "examples/*",
    "scripts/*",
    "fast-pysf/tests/*",
    "fast-pysf/examples/*",
    "*/conftest.py",
    "*/__pycache__/*",
]
parallel = true
branch = true
data_file = "output/coverage/.coverage"

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "output/coverage/htmlcov"
show_contexts = false

[tool.coverage.json]
output = "output/coverage/coverage.json"
show_contexts = false

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--durations=10",
]
testpaths = ["tests", "fast-pysf/tests"]
filterwarnings = [
    # Suppress external library warnings
    "ignore::UserWarning:pygame.*",
    "ignore::DeprecationWarning:pygame.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:stable_baselines3.*",
    "ignore::UserWarning:stable_baselines3.*",
    "ignore::UserWarning:gymnasium.*",
    # Keep our own warnings visible
    "default::DeprecationWarning:robot_sf.*",
    "default::UserWarning:robot_sf.*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "timeout: marks tests with a timeout expectation",
]


[dependency-groups]
dev = [
    # Development tools
    "pytest>=9.1.1",
    "pytest-timeout>=2.4.0",
    "pytest-cov>=7.1.0",
    "scalene>=2.3.0",
    "ruff==0.15.12",
    "pre-commit>=4.6.0",
    "setuptools>=83.0.0",
    "pylint>=4.0.6",
    "pytest-xdist>=3.6.1",
    "pytest-split>=0.9.0",
    "jupyter>=1.0.0",
    "mypy>=1.0.0",
    "mutmut",
]
docs = [
    "myst-parser>=4.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]
carla = [
    # Host-side Python client for the pinned CARLA Docker/runtime path. Keep this as an explicit
    # dependency group so routine `uv sync --all-extras` installs remain CARLA-free.
    "carla==0.9.16 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
imitation = [
    "imitation>=1.0.0",
]

[project.scripts]
robot_sf_bench = "robot_sf.benchmark.cli:main"
robot-sf-export-carla-t0 = "robot_sf_carla_bridge.cli:export_t0_scenarios_main"
robot-sf-validate-carla-t0-manifest = "robot_sf_carla_bridge.cli:validate_t0_manifest_main"
robot-sf-validate-carla-t0-batch = "robot_sf_carla_bridge.cli:validate_t0_export_batch_main"
robot-sf-check-carla = "robot_sf_carla_bridge.cli:check_carla_availability_main"
robot-sf-catalog-carla-schemas = "robot_sf_carla_bridge.cli:catalog_carla_schemas_main"
robot-sf-carla-t1-oracle-smoke = "robot_sf_carla_bridge.cli:replay_t1_oracle_smoke_main"
robot-sf-carla-docker-runtime = "robot_sf_carla_bridge.cli:carla_docker_runtime_main"
robot-sf-carla-parity-bundle-preflight = "robot_sf_carla_bridge.cli:preflight_carla_parity_bundle_main"
robot-sf-carla-replay-diagnostics = "scripts.carla_bridge.diagnose_replay_semantics:main"
robot-sf-migrate-artifacts = "scripts.tools.migrate_artifacts:main"

# Note: uv-specific config removed to avoid duplicate-config warnings with uv.toml

[tool.uv]
conflicts = [
    [
        { extra = "rllib" },
        { group = "imitation" },
    ],
]

[tool.uv.sources]
pysocialforce = { path = "fast-pysf", editable = true }
pyrvo2 = { path = "third_party/python-rvo2" }

[tool.ty.src]
exclude = [
    "tests",
    "tests/pygame",
    "fast-pysf/tests",
    "fast-pysf/examples",
    "fast-pysf/benchmarks"
]

[tool.ty.environment]
python = "./.venv"
